# pyINDI

./: CLAUDE.md  Dockerfile  Dockerfile-client  MANIFEST.in  README.md  build.ps1  docker-compose.yml  package.json  pyproject.toml  requirements.txt  run.ps1  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: docker-client.yml  docker.yml  jest.yml  tox.yml
docs/: README.md  spie-abstract.md
example_clients/: SkeletonClient.py  apogee.html  blob.html  blob.py  bok.py  client.html  debugger.py  example.py  kuiper.py  mmtcam.html  mmtcam.py  ninety-prime.html  ninetyprime-observer.html  ninetyprime_client.py  pyindi-panel.html  pyindi_bok.py  pyindi_panel_kuiper.py  simple_webclient.py  template.html  webapp.py  webclient.py
example_clients/gui/: app.py  gui.html  gui.py
example_drivers/: blob-device.py  mount.py  skeleton.py  skeleton.xml  testdevice.py
licenses/: LICENSE.rst
pyindi/: __init__.py  client.py  device.py  utils.py  version.py  webclient.py
pyindi/tests/: test_client.py  test_device.py
pyindi/www/: index.html
pyindi/www/__tests__/: utils-indi.test.js
pyindi/www/static/: indi.css  indi.js  maps-indi.js
pyindi/www/static/css/: custom.css  indi.css
pyindi/www/static/indi/: indi.css  indi.js  maps-indi.js  utility.js
pyindi/www/static/js/: builder-indi.js  config.js  constants.js  custom.js  fake-data.js  indi.js  logger-indi.js  maps-indi.js  updater-indi.js  utility.js  utils-indi.js
pyindi/www/static/js9/: package-lock.json  package.json
pyindi/www/static/js9/js/: jquery.contextMenu.js
pyindi/www/templates/: index.html
src/: indi.dtd  main.py  number.dtd
www/: generic.html
www/indi/: indi.js
www/indi/indi/: indi.js
