[metadata]
name = pyindi
author = TE Pickering, Scott Swindell
author_email = sswindell@mmto.org
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://github.com/mmtobservatory/pyindi
description = Native python INDI driver library using asynio.
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = mmtobservatory/pyindi

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
setup_requires = setuptools_scm
install_requires =
    lxml
    pillow
;    opencv-contrib-python-headless
    

[options.entry_points]
console_scripts =
    astropy-package-template-example = packagename.example_mod:main

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
pyindi = data/*

[tool:pytest]
testpaths = "pyindi" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    pyindi/_astropy_init*
    pyindi/conftest.py
    pyindi/*setup_package*
    pyindi/tests/*
    pyindi/*/tests/*
    pyindi/extern/*
    pyindi/version*
    */pyindi/_astropy_init*
    */pyindi/conftest.py
    */pyindi/*setup_package*
    */pyindi/tests/*
    */pyindi/*/tests/*
    */pyindi/extern/*
    */pyindi/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
